Write draft of the third scene

--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -38,60 +38,82 @@
 「私こそ、ごめん。そんな気にさせるつもりはなかった」ケイがいう。その後、ぼくが何も話さないのを確認すると、彼女が続けた。
 「それじゃ今は、サイボーグになりたいとは思わない？」
 
-　こないだのミノルの質問と同じだった。ただ、きみのように強くなれるなら、なんて言えるはずもなく、言葉をにごす。
+　こないだのミノルの質問と同じだった。ただ、「きみのように強くなれるなら」なんて言えるはずもなく、言葉をにごす。
 「どうだろう……」そう言って彼女の方を見る。彼女は、立ったまま座るつもりがないようだった。考えてみれば、地面に座るというのは椅子に座るより難易度が高そうだ。彼女は、ぼくの方を見すえて、次の言葉を待っている。
 
-　ぼくは、また目をそらす。ざっとあたりを見回したけれど、僕とケイが話していることに気づいている人はいなさそうだった。ケイが別の誰かにここでの話をすることもないだろう。意を決して、ぼくは気になっていたことを聞くことにした。
-「きみは、サイボーグだからそんなに強いの？」目をそらしたままたずねた。正面きって聞くことはできなかった。
+　ぼくは、また目をそらす。ざっとあたりを見回したけれど、僕とケイが話していることに気づいている人はいなさそうだった。ケイが別の誰かにここでの話をすることもないだろう。ぼくは意を決して、気になっていたことを聞くことにした。
+「きみは、サイボーグだからそんなに強いの？」目をそらしたままたずねた。恥ずかしさから、正面きって聞くことはできなかった。
 
 「面白いこと言うのね」ケイがいう。合成音声の調子はいつもと変わらなかったけれど、心なしか笑っているように聞こえた。
-「答えたくなかったら、答えなくていい」ぼくはうつむいたまま彼女の言葉をまねる。
+「答えたくなかったら、答えなくていい」ぼくは目を背けたまま、彼女の言葉をまねる。
 
 　すると、彼女もぼくから視線を外して、運動場の方をみながらいった。
 「口がかたそうだから話すけど、これからいうことは秘密にして」
 
-　ぼくはうなずく。サイボーグになった経緯を聞かれたときのように、きっぱり断るだろうと思っていたので少し驚いた。
+　ぼくはうなずく。サイボーグになった経緯を聞かれたときのように、彼女はきっぱり断るだろうと思っていたので、少し驚いた。
 
 「わたしが強いかどうかは、わたしにはわからない。でも、今のわたしがあるのは、わたしがサイボーグになったからだと確信をもっていえる」彼女は、そこで一瞬言葉を切った。
 
-「入学式の朝、ロボットかって言われたけれど、ロボット扱いされるはあれが初めてなんかじゃない。これまで何度もロボットに間違えられてきた。
+<!-- 覚悟を決めてる描写 -->
+　理由はわからないけれど、ケイは、何か覚悟を決めてぼくの質問に答えようとしているらしかった。そんな彼女の態度を応えるため、ぼくも真剣に耳を傾ける。
 
-　サイボーグの体でようやく歩けるようになった頃、病院やリハビリ施設を歩いていると、よく目の前にゴミを投げられた。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうするの。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。そういった施設でロボットといえば掃除ロボットくらいしかいなかったし、わたしも今よりずっとロボットらしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたの。
+「入学式の朝、ロボットかって言われたけれど、ロボット扱いされるはあれが初めてなんかじゃない。これまで何度も、ロボットに間違えられてきた。
 
-　やるせなかった。
+　サイボーグの体でようやく歩けるようになった頃、病院やリハビリ施設を歩いていると、よく目の前にゴミを投げられた。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうするの。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。そういう場所にいるロボットといえば掃除ロボットくらいだったし、わたしも今よりずっと機械らしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたわけ」
+
+　それを知って、最初はやるせなかった。タツオみたいに悪意があれば怒ることも簡単だけど、その時は怒りをどこに向ければいいのかわからなかった。けれど、何度もロボットに間違えられるうち、やるせなさはある疑問に変わった。わたしは本当に人間なのかって。わたしは、自分を人間だと思い込んでるロボットかもしれないって思ったの。鏡を見ても、そこにあるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、心音を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その*目*で見たものが本当かも、その体が本当にわたしのものかもわからない。
+
+　わたしは、自分が人間であるという根拠を探した。いろいろな本を読んでわかったのは、そもそも『{人間|パーソン}』の定義が曖昧だということだった。それに気づいたとき、わたしは、人間であることの定義を、わたしの外側ではなく、わたし自身の内側に求めることにした。つまり、*わたしは*、*わたし自身が人間だと思うから*、*人間である*。そう考えることにしたの。
+
+　それ以来、わたしは自分が人間であるということを強く意識してきた。それが、今のわたしを形作ってる。サイボーグにならなかったら、こうはなってない」
+
+　言い終えると、彼女はそのまま黙り込んだ。微動だにしないその表情は、何かを読み取るにはあまりに難しかった。ただ、彼女の真剣な言葉に、ぼくもできる限り応えようと思った。
+
+「話してくれてありがとう。きみの強さが理由が、少しわかった気がする。
+
+　サイボーグになったから、今のきみがある。そして、ぼくは今のきみを強いと思っている。でもそれは、サイボーグになれば自然に手に入る強さじゃない。きみがきみだからこそ手に入れられた強さなんだと思う。
+
+　ぼくははじめ、病弱な体を変えるために、サイボーグににりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにして、問題をすり替えていたんだと思う。きっと、ぼく自身が、心を強く持たないといけないんだね……」
+
+「それは違う。心の問題と体の問題は、そんな簡単に割り切れるものじゃない」彼女はかぶりをふりながら、きっぱりと言った。
+
+「わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。
+
+　きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない。わたしは、心と体が不可分だと思ってる。この機械の体でさえ、わたしの心と密接に関わっている。
+
+　人間はむかしから、体を変えることで心を変えようとしてきた。サイボーグ化はちょっと極端だけれど、たとえば化粧や筋トレもそう。すべてがそうというわけではないけれど、自分に自信をもつため――心を強くするため――に、化粧や筋トレをする人のは少なくない」
+
+「きみは、ぼくにサイボーグになるべきだと言いたいの」ぼくがそういうと、彼女はまた首を振る。
+
+「それは、きみ自身が決めなければならない」
+
+「わたしは、
+こころをつよくｓ不自然なことじゃない
+
+
+でもそれを体のせいにして、
+
+　あまりの浅はかさに虚しくなる。
+
+ぼくも、彼女の真剣さに答えようと思った
+
+「
+
+　
+
+
+わたしのアイデンティティは、サイボーグの体と、自分が人間であるという意識にある。
+それが、わたしが今のようになった理由。サイボーグにならなかったら、こうはなってない。わたしを強いと思うのなら、それは、
+
+。怒りも向けられるけど、ゴミを投げる人たちに怒りを矛先を向けるのは違う。
+
 自分が人間じゃないと
 
-後からわかったんだけど、
-なんでそんなことするかっていうと、私のことを掃除ロボットだと思ったみたい。施設には、
-
-掃除ロボット
-ショックだった。悪意はない。
-
-むしろ、わたしがサイボーグであることをわかったうえで悪意を持って聞いてきたぶん、扱いやすかった。数年前は、全身サイボーグなんてほとんど認知されていなかったし、ましてや、子どものサイボーグなんて想像打にされていなかった。
-昔なんかはいきなりロボット扱いされた
-
-昔は、あの朝みたいに、ロボットだと思われることは珍しくなかった。今でこそサイボーグが認知されて、
-
-サイボーグになってはじめて、鏡を見た時はやっぱりショックだった。
 
 ケイ「自分が機械の体になったことを認識したあとは、自分が本当に人間なのか自信を持てなくなった。いまでこそ、サイボーグという存在が知られてきたけれど、数年前、しかも子どものサイボーグなんて認知されてなかったから、ロボットだと思われた。入学式の朝の件は初めてじゃなかった。わたしは人間なんだということを強く持たないといけない。わたし自身の意志」
 
-これをき
 
 ---
-
-
-「わたしがサイボーグになって目を覚ましたとき、そこにあったの地獄だった。もう聞いていると思うけど、わたしはひどい事故の結果、自分の意志とは関係なくサイボーグにされた。意識を取り戻したときには、かろうじて目と耳が機械化されていた。でも、それを通して見たり聞いたりする世界は、それまで生きてきた世界とは全くの別物だった。見たいものは見えず、聞きたいものは聞こえない。逆に、見たくなくても目をつむることはできないし、聞きたくないノイズばかりが聞こえてくる。なんとか人を認識して、話を聞くことができるようになると、両親はすでに死んでいること、わたしの体も脳以外ほとんど残っていないことが知らされた。でも、不思議なことにその時は何も感じなかった。悲しみや絶望を感じる感覚さえも麻痺してしまってたんだと思う」
-
-　言葉が出なかった。
-
-「その後は、医者や技術者にされるがまま体を拡張されていった。赤ん坊に戻ったように、少しずつ自分の体の動かし方を覚えていく。あの頃のわたしに、意識があったといえるのかわからない。ただがむしゃらに、指示されるがままトレーニングしていた。次に、わたしがわたしを意識したのは、自分で立って鏡の前に立ったときだった。わかってはいたけれど、自分の姿がショックだった。
-
-首を動かして自分の見ている向きを変えたり、言葉にならない音を出したりできるようになった。
-
-「でも、わたしにはどうすることもできなかった。まだ手も足もなかったから、自殺することすらできない。かろうじてできたのは、イエスかノーの信号を発することとだった。わたしの近くには常に誰かがいて、サイボーグについて色々と話してくれた。訓練すれば手足を動かせるようになることとか、話せるようになることとか。わたしは彼らに言われるがまま、されるがままサイボーグになった。
-
-ケイ「自分が機械の体になったことを認識したあとは、自分が本当に人間なのか自信を持てなくなった。いまでこそ、サイボーグという存在が知られてきたけれど、数年前、しかも子どものサイボーグなんて認知されてなかったから、ロボットだと思われた。入学式の朝の件は初めてじゃなかった。自分を強く持たないといけない」
 
 ケイ「悔しかった。自分を強く持たないといけない。ロボットではない、と意識して。そのときに今の私が生まれた。サイボーグにならなかったら、こうはならない」
 
