--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -2,19 +2,19 @@
 
 　クラスで行われた自己紹介から、彼女の趣味が読書ということと、車で南に三十分くらいのところに住んでいるということがわかった。彼女は、どうやら車による送迎で通学しているらしかった。
 
-　彼女がどういう経緯でサイボーグになったかや、サイボーグであることを僕たちにどう捉えてほしいかということを、みんな聞きたがっていたが、彼女の口からそれが語られることはなかった。
+　みんなが聞きたがったのは、彼女がどういう経緯でサイボーグになったかや、サイボーグであることを僕たちにどう捉えてほしいかということだったが、彼女の口からそれが語られることはなかった。
 
 　授業がはじまっても、彼女に特別な配慮がなされるということはほとんどなかった。当てられれば質問に答えるし、黒板に回答も書きに行く。先生たちも、意識的に彼女を特別扱いしないようにしているようだった。彼女が思ったより普通だということがわかると、何人かは彼女に話しかけるようになった。毅然とした態度は第一印象のままだったけれど、クラスメイトと話す気がないということはないみたいだった。ただ、教室移動なんかのときに、ある生徒が気遣って教科書を持とうとしても、彼女がそれを受け入れることはなかった。また、彼女から他の誰かに話しかけるということもなかった。
 
 　昼休みに、彼女は教室から姿を消す。あとをつけたというクラスメイトの話によると、職員室の横にある生徒の立ち入りが禁止された部屋の中へ入っていったとのことだった。その部屋は、外から中の様子がわからないようになっている。その生徒は、さらに先生の目を盗んでドアを開けてのぞき見しようとしたらしいが、鍵がかかっていたらしい。彼女は、そこで*充電*しているのではないか、という噂だった。
 
-　まだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女はやはりロボットで、ここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女は国の秘密機関の被検体で、彼女の体には一般には知られていない特殊なパーツが使われているといった話だ。他にも、実は何十歳も年上のばあさんで、それがばれないようにサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、あの事件を根に持ったタツオがクラスの外で流したものらしかった。
+　まだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女はやはりロボットで、ここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女は国の秘密機関の被検体で、彼女の体には一般には知られていない特殊なパーツが使われているといった話だ。じっさい、彼女の体は、見たことないほどリアルで繊細だった。他にも、実は何十歳も年上のばあさんで、それがばれないようにサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、あの事件を根に持ったタツオがクラスの外で流したものらしかった。
 
 　そういった話の中で、唯一信憑性があるのは、彼女が六年前の航空機事故の被害者というものだった。その根拠は、死亡者リストに彼女の両親とおぼしき男女の名前があったことだ。二人とも彼女と同じ姓で、それは決してよくある姓というわけではなかった。記事には、当時まだ実験導入だった緊急生命維持装置が用いられたという記述もあった。それは、サイボーグの中核となる技術を応用したものだった。
 
 　普段から彼女を気遣っている生徒――入学式の朝、席について教えてくれた髪の長い子だ――が、一度だけ、ごくごく遠まわしに、彼女がサイボーグになった経緯を聞こうとしたことがあった。しかし、ケイがきっぱりと「話したくない」といってその話は終わった。それ以来、誰も彼女にそれを聞くことはなかった。
 
-　ぼくはというと、四月が終わろうという時になっても、あまりクラスになじめずにいた。席の場所の悪さと、内気な性格があいまって、まだ大半のクラスメイトと話せていない。中学の時、休みがちで迷惑をかけた経験から、部活にも入らなかった。休み時間は基本的に一人で過ごす。また、体調もだんだんと悪くなってきていた。
+　ぼくはというと、四月が終わろうという時になっても、あまりクラスになじめずにいた。席の場所の悪さと、気弱な性格があいまって、まだ大半のクラスメイトと話せていない。中学の時、休みがちで迷惑をかけた経験から、部活にも入らなかった。休み時間は基本的に一人で過ごす。また、体調もだんだんと悪くなってきていた。
 
 　その日、ぼくは体育の授業を見学していた。クラスメイトがハードル走の練習をしているのを、運動場の隅の木陰に座ってぼんやり眺めているときだった。
 「きみ、サイボーグになりたいの」と、横から突然声がした。
@@ -27,22 +27,22 @@
 　ミノルが話したんだろうか、ということが頭をよぎるが、ミノルと彼女に接点があるとは考えにくかった。
 「一応言っておくと、ミノルくんから聞いたわけじゃない。だけど、誰から聞いたかはいえない」ケイが、ぼくの考えを先読みしたように付け加えた。彼女の口からミノルの名前が出たことで、ぼくはいっそう混乱する。いったいどこでミノルのことを知ったのだろう。
 
-「答えたくなかったら、答えなくていい」ケイがさらに言葉を重ねる。どこでその話を聞いたかについて、それ以上話す気はなさそうだった。
+「答えたくなかったら、答えなくていい」ケイがさらに言葉を重ねる。それ以上ぼくの疑問にこたえる気はなさそうだった。
 
-　話したくないのなら、まあいいか。ぼくは諦めてはじめの質問に答える。
+　いえないというのなら、まあいいか。ぼくは諦めてはじめの質問に答える。
 「小学生の頃の話だよ。物語のヒーローにあこがれるのと同じさ」
 
-　そう言ったあと、彼女のようにサイボーグにならざるをえない人もいる中で、サイボーグになりたいなんていっていたことが、あまりに無神経なことに思えて、恥ずかしくなった。
+　そう言ったあと、彼女のように事故や病気でサイボーグにならざるをえない人もいる中で、サイボーグになりたいなんていっていたことが、あまりに無神経なことに思えて、恥ずかしくなった。
 「気を悪くしたのなら、ごめん」ぼくは目を伏せていった。
 
-「私こそ、ごめん。そんな気にさせるつもりはなかった」ケイがいう。その後、ぼくが何も話さないのを確認すると、彼女が続けた。
+「私こそ、ごめん。そんな気にさせるつもりはなかった」ケイがいう。ぼくが何も話さないのを確認すると、彼女が続けた。
 「それじゃ今は、サイボーグになりたいとは思わない？」
 
-　こないだのミノルの質問と同じだった。ただ、「きみのように強くなれるなら」なんて言えるはずもなく、言葉をにごす。
+　こないだのミノルの質問と同じだった。ただ、あの時みたいに「きみのように強くなれるなら」なんて言えるはずもなく、言葉をにごす。
 「どうだろう……」そう言って彼女の方を見る。彼女は、立ったまま座るつもりがないようだった。考えてみれば、地面に座るというのは椅子に座るより難易度が高そうだ。彼女は、ぼくの方を見すえて、次の言葉を待っている。
 
 　ぼくは、また目をそらす。ざっとあたりを見回したけれど、僕とケイが話していることに気づいている人はいなさそうだった。ケイが別の誰かにここでの話をすることもないだろう。ぼくは意を決して、気になっていたことを聞くことにした。
-「きみは、サイボーグだからそんなに強いの？」目をそらしたままたずねた。恥ずかしさから、正面きって聞くことはできなかった。
+「きみは、サイボーグだからそんなに強いの？」目をそらしたままたずねた。
 
 「面白いこと言うのね」ケイがいう。合成音声の調子はいつもと変わらなかったけれど、心なしか笑っているように聞こえた。
 「答えたくなかったら、答えなくていい」ぼくは目を背けたまま、彼女の言葉をまねる。
@@ -50,7 +50,7 @@
 　すると、彼女もぼくから視線を外して、運動場の方をみながらいった。
 「口がかたそうだから話すけど、これからいうことは秘密にして」
 
-　ぼくはうなずく。サイボーグになった経緯を聞かれたときのように、彼女はきっぱり断るだろうと思っていたので、少し驚いた。
+　サイボーグになった経緯を聞かれたときのように、彼女はきっぱり断るだろうと思っていたので、少し驚いた。ぼくはうなずいた。
 
 「わたしが強いかどうかは、わたしにはわからない。でも、今のわたしがあるのは、わたしがサイボーグになったからだと確信をもっていえる」彼女は、そこで一瞬言葉を切った。
 
@@ -59,9 +59,11 @@
 
 「入学式の朝、ロボットかって言われたけれど、ロボット扱いされるはあれが初めてなんかじゃない。これまで何度も、ロボットに間違えられてきた。
 
-　サイボーグの体でようやく歩けるようになった頃、病院やリハビリ施設を歩いていると、よく目の前にゴミを投げられた。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうするの。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。そういう場所にいるロボットといえば掃除ロボットくらいだったし、わたしも今よりずっと機械らしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたわけ」
+　サイボーグの体でようやく歩けるようになったころ、病院やリハビリ施設を歩いていると、よく目の前にゴミを投げられた。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうするの。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。そういう場所にいるロボットといえば掃除ロボットくらいだったし、わたしも今よりずっと機械らしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたわけ」
 
-　それを知って、最初はやるせなかった。タツオみたいに悪意があれば怒ることも簡単だけど、その時は怒りをどこに向ければいいのかわからなかった。けれど、何度もロボットに間違えられるうち、やるせなさはある疑問に変わった。わたしは本当に人間なのかって。わたしは、自分を人間だと思い込んでるロボットかもしれないって思ったの。鏡を見ても、そこにあるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、心音を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その*目*で見たものが本当かも、その体が本当にわたしのものかもわからない。
+　おかしいでしょ、というように彼女は自虐的に微笑んだ。悲しいすれ違いに、ぼくはとても笑う気になれない。この話がどこへ向かっているのかわからなかったけれど、ぼくは黙ったまま続きを促した。
+
+「それを知ったとき、最初はやるせなかった。タツオみたいに悪意があれば怒ることも簡単だけど、その時は怒りをどこに向ければいいのかわからなかった。けれど、何度もロボットに間違えられるうち、やるせなさはある疑問に変わった。わたしは本当に人間なのかって。わたしは、自分を人間だと思い込んでるロボットかもしれないって思ったの。鏡を見ても、そこにいるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、鼓動を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その*目*で見たものが本当かも、その体が本当にわたしのものかもわからない。
 
 　わたしは、自分が人間であるという根拠を探した。いろいろな本を読んでわかったのは、そもそも『{人間|パーソン}』の定義が曖昧だということだった。それに気づいたとき、わたしは、人間であることの定義を、わたしの外側ではなく、わたし自身の内側に求めることにした。つまり、*わたしは*、*わたし自身が人間だと思うから*、*人間である*。そう考えることにしたの。
 
@@ -69,62 +71,17 @@
 
 　言い終えると、彼女はそのまま黙り込んだ。微動だにしないその表情は、何かを読み取るにはあまりに難しかった。ただ、彼女の真剣な言葉に、ぼくもできる限り応えようと思った。
 
-「話してくれてありがとう。きみの強さが理由が、少しわかった気がする。
+「きみの強さが理由が、少しわかった気がする。サイボーグになったから、今のきみがある。そして、ぼくは今のきみを強いと思っている。でもそれは、サイボーグになれば自然に手に入る強さじゃない。きみがきみだからこそ手に入れられた強さなんだと思う。
 
-　サイボーグになったから、今のきみがある。そして、ぼくは今のきみを強いと思っている。でもそれは、サイボーグになれば自然に手に入る強さじゃない。きみがきみだからこそ手に入れられた強さなんだと思う。
+　ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにして、問題をすり替えていたんだと思う。きっと、ぼく自身が、心を強く持たないといけないんだね……」
 
-　ぼくははじめ、病弱な体を変えるために、サイボーグににりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにして、問題をすり替えていたんだと思う。きっと、ぼく自身が、心を強く持たないといけないんだね……」
+「それは違う」彼女はかぶりをふりながら、はっきりと言った。
+「心の問題と体の問題は、そんな簡単に割り切れるものじゃない。わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。
 
-「それは違う。心の問題と体の問題は、そんな簡単に割り切れるものじゃない」彼女はかぶりをふりながら、きっぱりと言った。
+　きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない。わたしは、心と体が不可分だと思ってる。この機械の体でさえ、わたしの心と密接につながっている。
 
-「わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。
+　体を変えることで心を変えようとするのは何も珍しい話じゃない。サイボーグはちょっと極端だけれど、たとえば化粧や筋トレもそう。すべての化粧や筋トレがそうというわけではないけれど、自分に自信をもつため――心を強くするため――に、化粧や筋トレをする人のは少なくない」
 
-　きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない。わたしは、心と体が不可分だと思ってる。この機械の体でさえ、わたしの心と密接に関わっている。
+「きみは、ぼくにサイボーグになるべきだと言いたいの」ぼくがそういうと、彼女はまた首を振った。
 
-　人間はむかしから、体を変えることで心を変えようとしてきた。サイボーグ化はちょっと極端だけれど、たとえば化粧や筋トレもそう。すべてがそうというわけではないけれど、自分に自信をもつため――心を強くするため――に、化粧や筋トレをする人のは少なくない」
-
-「きみは、ぼくにサイボーグになるべきだと言いたいの」ぼくがそういうと、彼女はまた首を振る。
-
-「それは、きみ自身が決めなければならない」
-
-「わたしは、
-こころをつよくｓ不自然なことじゃない
-
-
-でもそれを体のせいにして、
-
-　あまりの浅はかさに虚しくなる。
-
-ぼくも、彼女の真剣さに答えようと思った
-
-「
-
-　
-
-
-わたしのアイデンティティは、サイボーグの体と、自分が人間であるという意識にある。
-それが、わたしが今のようになった理由。サイボーグにならなかったら、こうはなってない。わたしを強いと思うのなら、それは、
-
-。怒りも向けられるけど、ゴミを投げる人たちに怒りを矛先を向けるのは違う。
-
-自分が人間じゃないと
-
-
-ケイ「自分が機械の体になったことを認識したあとは、自分が本当に人間なのか自信を持てなくなった。いまでこそ、サイボーグという存在が知られてきたけれど、数年前、しかも子どものサイボーグなんて認知されてなかったから、ロボットだと思われた。入学式の朝の件は初めてじゃなかった。わたしは人間なんだということを強く持たないといけない。わたし自身の意志」
-
-
----
-
-ケイ「悔しかった。自分を強く持たないといけない。ロボットではない、と意識して。そのときに今の私が生まれた。サイボーグにならなかったら、こうはならない」
-
-ヒロト「体のせいにしてちゃダメだよね」
-
-ケイ「私は、そうは思わない。強くなろうとしたのは、私の意思と言えるかもしれないけれど、それは体のせいでもある。
-
-人間らしくなるために体を変えてきた
-
-心と体は密接に関係している。化粧とか。人間の歴史は身体の拡張
-丈夫な体になれば、心も強くなるという可能性はないとは思わない
-「強い体を手に入れたいと思うのは、不自然なことじゃない」
-
-「身近にいるんだから、きいてみたら」
+「それは、きみ自身が考えること」
