Improve the third scene

--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -30,7 +30,7 @@
 「答えたくなかったら、答えなくていい」ケイがさらに言葉を重ねる。それ以上ぼくの疑問にこたえる気はなさそうだった。
 
 　いえないというのなら、まあいいか。ぼくは諦めてはじめの質問に答える。
-「小学生の頃の話だよ。物語のヒーローにあこがれるのと同じさ」
+「小学生の頃の話だよ。物語のヒーローにあこがれるみたいなものさ」
 
 　そう言ったあと、彼女のように事故や病気でサイボーグにならざるをえない人もいる中で、サイボーグになりたいなんていっていたことが、あまりに無神経なことに思えて、恥ずかしくなった。
 「気を悪くしたのなら、ごめん」ぼくは目を伏せていった。
@@ -50,16 +50,14 @@
 　すると、彼女もぼくから視線を外して、運動場の方をみながらいった。
 「口がかたそうだから話すけど、これからいうことは秘密にして」
 
-　サイボーグになった経緯を聞かれたときのように、彼女はきっぱり断るだろうと思っていたので、少し驚いた。ぼくはうなずいた。
+　サイボーグになった経緯を聞かれたときのように、彼女はきっぱり断るだろうと思っていたので、少し驚いた。ぼくはうなずく。
 
-「わたしが強いかどうかは、わたしにはわからない。でも、今のわたしがあるのは、わたしがサイボーグになったからだと確信をもっていえる」彼女は、そこで一瞬言葉を切った。
+「わたしが強いかどうかは、わたしにはわからない。でも、今のわたしがあるのは、わたしがサイボーグになったからだと確信をもっていえる。それには、あるきっかけがあった……」彼女は、そこで一瞬言葉を切った。
 
 <!-- 覚悟を決めてる描写 -->
-　理由はわからないけれど、ケイは、何か覚悟を決めてぼくの質問に答えようとしているらしかった。そんな彼女の態度を応えるため、ぼくも真剣に耳を傾ける。
+　ケイが自分のことを話そうとしていると気づいて、ぼくは少し身構えた。ぼくの知る範囲では、これまで誰も彼女から彼女自身の話を聞いたものはいなかった。なぜぼくなんかに他の誰にもしないようなことを話そうとしているのかわからなかったけれど、わざわざ秘密にしてと前置きして話そうとしているのだ。彼女がぼくを信用してくれていることを感じて、それに応えようと思った。ぼくは、耳を澄ませて、彼女の言葉を待った。
 
-「入学式の朝、ロボットかって言われたけれど、ロボット扱いされるはあれが初めてなんかじゃない。これまで何度も、ロボットに間違えられてきた。
-
-　サイボーグの体でようやく歩けるようになったころ、病院やリハビリ施設を歩いていると、よく目の前にゴミを投げられた。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうするの。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。そういう場所にいるロボットといえば掃除ロボットくらいだったし、わたしも今よりずっと機械らしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたわけ」
+「サイボーグの体でようやく歩けるようになったころ、一人で病院やリハビリ施設を歩いていると、よく目の前にゴミを投げられた。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうするの。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。そういう場所にいるロボットといえば掃除ロボットくらいだったし、わたしも今よりずっと機械らしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたわけ」
 
 　おかしいでしょ、というように彼女は自虐的に微笑んだ。悲しいすれ違いに、ぼくはとても笑う気になれない。この話がどこへ向かっているのかわからなかったけれど、ぼくは黙ったまま続きを促した。
 
@@ -69,18 +67,22 @@
 
 　それ以来、わたしは自分が人間であるということを強く意識してきた。それが、今のわたしを形作ってる。サイボーグにならなかったら、こうはなってない」
 
-　言い終えると、彼女はそのまま黙り込んだ。微動だにしないその表情は、何かを読み取るにはあまりに難しかった。ただ、彼女の真剣な言葉に、ぼくもできる限り応えようと思った。
+　言い終えると、彼女はそのまま黙り込んだ。微動だにしないその表情は、何かを読み取るにはあまりに難しかった。
 
-「きみの強さが理由が、少しわかった気がする。サイボーグになったから、今のきみがある。そして、ぼくは今のきみを強いと思っている。でもそれは、サイボーグになれば自然に手に入る強さじゃない。きみがきみだからこそ手に入れられた強さなんだと思う。
+　ぼくは、あの入学式の朝、悪意のある言葉に全く動じない彼女を見て強いと思った。でも、それは間違いだった。きっと、彼女は傷ついていたに違いない。ただ、あんな言葉でつくくらいの傷よりずっと深い傷をいくつも負っていて、目立たなかっただけなのだ。
+
+「きみの強さが理由が、少しわかった気がする。サイボーグになったから、今のきみがある。そして、ぼくは今のきみを強いと思っている。でもそれは、サイボーグになれば自然に手に入る強さじゃない。きみがきみだからこそ手に入れられた強さなんだと思う……。
 
 　ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにして、問題をすり替えていたんだと思う。きっと、ぼく自身が、心を強く持たないといけないんだね……」
 
 「それは違う」彼女はかぶりをふりながら、はっきりと言った。
 「心の問題と体の問題は、そんな簡単に割り切れるものじゃない。わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。
 
-　きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない。わたしは、心と体が不可分だと思ってる。この機械の体でさえ、わたしの心と密接につながっている。
+　きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない。わたしは、心と体が不可分だと思ってる。この機械の体でさえ、わたしの心と密接につながっている」
 
-　体を変えることで心を変えようとするのは何も珍しい話じゃない。サイボーグはちょっと極端だけれど、たとえば化粧や筋トレもそう。すべての化粧や筋トレがそうというわけではないけれど、自分に自信をもつため――心を強くするため――に、化粧や筋トレをする人のは少なくない」
+　ぼくは改めて彼女の体を見た。はじめてみた時、ぼくは一瞬彼女のを何の変哲もない生徒だと思ったことを思い出した。彼女が言葉を続けた。
+
+「体を変えることで心を変えようとするのは何も珍しい話じゃない。サイボーグはちょっと極端だけれど、たとえば化粧や筋トレもそう。すべての化粧や筋トレがそうというわけではないけれど、自分に自信をもつため――心を強くするため――に、化粧や筋トレをする人のは少なくない」
 
 「きみは、ぼくにサイボーグになるべきだと言いたいの」ぼくがそういうと、彼女はまた首を振った。
 
