--- a/_drafts/01_確認の問い.md
+++ b/_drafts/01_確認の問い.md
@@ -7,20 +7,19 @@
 
 　学校に着いたとき、玄関の掲示で自分のクラスを確認して、教室で待つよう指示された。一緒に登校した幼なじみのミノルとは、別のクラスだった。教室に入ると、すでに八割方のクラスメイトがそろっているようだった。入口近くの席に座っていたスカートを履いた長い髪の生徒が、黒板に出席番号で席の指示があると教えてくれた。
 
-　ぼくの席は――不運なことに――廊下側一番うしろの角の席だった。話しかける相手の選択肢が、前と左の二つしかない。前の生徒は、さらにその前の生徒とすでに話し込んでいる。左の生徒とその前の生徒は、クラスの女子を一人ひとり取り上げては、アリだとかナシだとか話していた。二人とも制服をかなり着崩していて、左の席の生徒にいたっては、入学初日というのに校則違反のピアスまでしている。あまり関わりたくない感じだ。
+　ぼくの席は――不運なことに――廊下側一番うしろの角の席だった。話しかける相手の選択肢が、前と左の二つしかない。前の生徒は、さらにその前の生徒とすでに話し込んでいる。左の生徒とその前の生徒は、クラスの女子を一人ひとり取り上げては、アリだとかナシだとか話していた。二人とも制服をかなり着崩していて、左の生徒にいたっては、入学初日というのに校則違反のピアスまでしている。あまり関わりたくない感じだ。
 
-　そういうわけで、ぼくはまだ誰とも話せないでいた。後ろから全体を眺めると、同じように一人できまり悪そうにしているクラスメイトがポツリポツリといるのがわかる。そのうちの一番近い生徒のところへ席を立って話しかけにいこうか、と考える。どうやって話しかけるのが自然か、頭の中で何パターンもシミュレーションした。なかなか第一声が決まらずに、時間が過ぎていく。
+　そういうわけで、ぼくはまだ誰とも話せないでいた。後ろから全体を眺めると、同じように一人できまり悪そうにしているクラスメイトがポツリポツリといるのがわかる。そのうちの一番近い生徒のところへ席を立って話しかけにいこうか、と考える。どうやって話しかけるのが自然か、頭の中で何パターンもシミュレーションした。なかなか第一声が決まらずに、時間だけが過ぎていく。
 
 　一人で考え込んでいるうちに、いつのまにか教室がしんと静まり返っていた。何があったのかとあわてて周りを見渡すと、みんな教室の入口の方を向いている。その視線の先には、新しく入ってきたクラスメイトがいた。
 
 　それが、ケイだった。
 
-　はじめ、なぜみんなが黙り込んでしまったのか、ぼくにはわからなかった。何の変哲もない普通の生徒に見えた。しかし、彼女がドアを閉めようとして、違和感に気づく。*その動きは*、*人間のそれではなかった*。機械特有のなめらかさに欠けた動きだったのである。静寂の中で、低くうなるモーター音だけが響いていた。
+　はじめ、なぜみんなが黙り込んでしまったのか、ぼくにはわからなかった。何の変哲もない普通の生徒に見えたのだ。しかし、彼女がドアを閉めようとして、違和感に気づく。*その動きは*、*人間のそれではなかった*。機械特有のなめらかさに欠けた動きだったのである。静寂の中で、低くうなるモーター音だけが響いていた。
 
-　一瞬、ロボットが教室に入ってきたのかと思った。けれど、すぐそんなはずがないことに思い至る。いくらロボットが普及してきたとはいえ、公立の学校に導入されるほどではない。何より、これほどまで細かく人間を模したロボットが、学校なんかで必要になるはずがない。
+　一瞬、ロボットが教室に入ってきたのかと思った。けれど、すぐそんなはずがないことに思い至る。いくら非産業用の人型ロボットが普及してきたとはいえ、公立の学校に導入されるほどではない。何より、これほどまで細かく人間を模したロボットが、学校なんかで必要になるはずがない。
 
-<!-- FIXME: ソフトウェアの話も入れる -->
-　きっと、彼女はサイボーグだ。この十数年で、サイボーグ技術は驚くほど進歩した。二〇二〇年に〈悪魔の研究〉と呼ばれる膨大な論文や研究資料がインターネットに突如公開され、脳科学や神経科学といった分野を中心に、人間の身体に関する理解が大きく進展した。今では、ほとんどの身体機能は人工物で代替できるらしい。じっさい、義肢や義眼の人を見かけることは、それほど珍しくなくなっていた。
+　きっと、彼女はサイボーグだ。この十数年で、サイボーグ技術は驚くほど進歩した。二〇二〇年に〈悪魔の研究〉と呼ばれる膨大な論文や研究資料がインターネットに突然現れ、脳科学や神経科学といった分野を中心に、人間の身体に関する理解が大きく進展した。そして、ソフトウェアやハードウェアの技術発展とあいまって、サイボーグが現実のものとなったのだ。今では、ほとんどの身体機能は人工物で代替できるらしい。じっさい、義肢や義眼の人を見かけることは、それほど珍しくなくなっていた。
 
 <!-- FIXME: 「いや、…」や「どんなに精巧な人形も…」をなんとかする -->
 　しかし、彼女ほど身体の多くをサイボーグ化している人は見たことがない。ドアを閉める動きから、両手両足が義肢であることが分かる。服の内側はわからないが、顔も造りものだった。いや、遠目にはほとんどわからない。それでも、どんなに精巧な人形の顔も人間のものでないと分かるのと同じように、彼女の顔が自然のものでないことがわかる。その瞳や表情には、なにか生気のようなものが感じられなかった。
