--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -42,26 +42,25 @@
 「どうだろう……」そう言って彼女の方を見る。彼女は、立ったまま座るつもりがないようだった。考えてみれば、地面に座るというのは椅子に座るより難易度が高そうだ。彼女は、ぼくの方を見すえて、次の言葉を待っている。
 
 　ぼくは、また目をそらす。ざっとあたりを見回したけれど、僕とケイが話していることに気づいている人はいなさそうだった。ケイが別の誰かにここでの話をすることもないだろう。ぼくは意を決して、気になっていたことを聞くことにした。
-「きみは、サイボーグだからそんなに強いの？」目をそらしたままたずねた。
+「きみは、サイボーグだからそんなに強いの？」正面きってたずねることはできなくて、目をそらしたままたずねた。
 
 「面白いこと言うのね」ケイがいう。合成音声の調子はいつもと変わらなかったけれど、心なしか笑っているように聞こえた。
 「答えたくなかったら、答えなくていい」ぼくは目を背けたまま、彼女の言葉をまねる。
 
 　すると、彼女もぼくから視線を外して、運動場の方をみながらいった。
-「口がかたそうだから話すけど、これからいうことは秘密にして」
+「これからいうことは秘密にしてくれる？」
 
 　サイボーグになった経緯を聞かれたときのように、彼女はきっぱり断るだろうと思っていたので、少し驚いた。ぼくはうなずく。
 
 「わたしが強いかどうかは、わたしにはわからない。でも、今のわたしがあるのは、わたしがサイボーグになったからだと確信をもっていえる。それには、あるきっかけがあった……」彼女は、そこで一瞬言葉を切った。
 
-<!-- 覚悟を決めてる描写 -->
 　ケイが自分のことを話そうとしていると気づいて、ぼくは少し身構えた。ぼくの知る範囲では、これまで誰も彼女から彼女自身の話を聞いたものはいなかった。なぜぼくなんかに他の誰にもしないようなことを話そうとしているのかわからなかったけれど、わざわざ秘密にしてと前置きして話そうとしているのだ。彼女がぼくを信用してくれていることを感じて、それに応えようと思った。ぼくは、耳を澄ませて、彼女の言葉を待った。
 
 「サイボーグの体でようやく歩けるようになったころ、一人で病院やリハビリ施設を歩いていると、よく目の前にゴミを投げられた。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうするの。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。そういう場所にいるロボットといえば掃除ロボットくらいだったし、わたしも今よりずっと機械らしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたわけ」
 
-　おかしいでしょ、というように彼女は自虐的に微笑んだ。悲しいすれ違いに、ぼくはとても笑う気になれない。この話がどこへ向かっているのかわからなかったけれど、ぼくは黙ったまま続きを促した。
+　おかしいでしょ、というように彼女は自虐的に微笑んだ。ぼくはとても笑う気になれない。この話がどこへ向かっているのかわからなかったけれど、ぼくは黙ったまま続きを促した。
 
-「それを知ったとき、最初はやるせなかった。タツオみたいに悪意があれば怒ることも簡単だけど、その時は怒りをどこに向ければいいのかわからなかった。けれど、何度もロボットに間違えられるうち、やるせなさはある疑問に変わった。わたしは本当に人間なのかって。わたしは、自分を人間だと思い込んでるロボットかもしれないって思ったの。鏡を見ても、そこにいるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、鼓動を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その*目*で見たものが本当かも、その体が本当にわたしのものかもわからない。
+「それを知ったとき、最初はやるせなかった。タツオみたいに悪意があれば怒ることも簡単だけど、その時は怒りをどこに向ければいいのかわからなかった。けれど、何度もロボットに間違えられるうち、やるせなさはある疑問に変わった。わたしは本当に人間なのかって。わたしは、自分を人間だと思い込んでるロボットかもしれないって思うようになった。鏡を見ても、そこにいるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、鼓動を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その目で見たものが本当かも、その体が本当にわたしのものかもわからない。
 
 　わたしは、自分が人間であるという根拠を探した。いろいろな本を読んでわかったのは、そもそも『{人間|パーソン}』の定義が曖昧だということだった。それに気づいたとき、わたしは、人間であることの定義を、わたしの外側ではなく、わたし自身の内側に求めることにした。つまり、*わたしは*、*わたし自身が人間だと思うから*、*人間である*。そう考えることにしたの。
 
@@ -69,20 +68,20 @@
 
 　言い終えると、彼女はそのまま黙り込んだ。微動だにしないその表情は、何かを読み取るにはあまりに難しかった。
 
-　ぼくは、あの入学式の朝、悪意のある言葉に全く動じない彼女を見て強いと思った。でも、それは間違いだった。きっと、彼女は傷ついていたに違いない。ただ、あんな言葉でつくくらいの傷よりずっと深い傷をいくつも負っていて、目立たなかっただけなのだ。
+　ぼくは、あの入学式の朝、悪意のある言葉に全く動じない彼女を見て強いと思った。でも、それは間違いだった。きっと、彼女は傷ついていたに違いない。ただ、あの程度の言葉でつく傷なんかよりずっと深い傷をいくつも負っていて、目立たなかっただけなのだ。
 
-「きみの強さが理由が、少しわかった気がする。サイボーグになったから、今のきみがある。そして、ぼくは今のきみを強いと思っている。でもそれは、サイボーグになれば自然に手に入る強さじゃない。きみがきみだからこそ手に入れられた強さなんだと思う……。
+「きみの強さの理由が、少しわかった気がする。サイボーグになったから、今のきみがある。そして、ぼくは今のきみを強いと思っている。でもそれは、サイボーグになれば自然に手に入る強さじゃない。きみがきみだからこそ手に入れられた強さなんだと思う……。
 
-　ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにして、問題をすり替えていたんだと思う。きっと、ぼく自身が、心を強く持たないといけないんだね……」
+　ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにしていたんだと思う。きっと、ぼく自身が、心を強く持たないといけないんだね……」
 
 「それは違う」彼女はかぶりをふりながら、はっきりと言った。
 「心の問題と体の問題は、そんな簡単に割り切れるものじゃない。わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。
 
 　きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない。わたしは、心と体が不可分だと思ってる。この機械の体でさえ、わたしの心と密接につながっている」
 
-　ぼくは改めて彼女の体を見た。はじめてみた時、ぼくは一瞬彼女のを何の変哲もない生徒だと思ったことを思い出した。彼女が言葉を続けた。
+　ぼくは改めて彼女の体を見た。はじめてみた時、ぼくは一瞬彼女のを何の変哲もない生徒だと思ったことを思い出した。彼女がさらに言葉を続けた。
 
-「体を変えることで心を変えようとするのは何も珍しい話じゃない。サイボーグはちょっと極端だけれど、たとえば化粧や筋トレもそう。すべての化粧や筋トレがそうというわけではないけれど、自分に自信をもつため――心を強くするため――に、化粧や筋トレをする人のは少なくない」
+「体を変えることで心を変えようとするのは何も珍しい話じゃない。サイボーグはちょっと極端だけれど、たとえば化粧や筋トレもそう。多くの人は、自分に自信をもつため――心を強くするため――に、化粧や筋トレをしている」
 
 「きみは、ぼくにサイボーグになるべきだと言いたいの」ぼくがそういうと、彼女はまた首を振った。
 
