--- a/_drafts/02_帰り道.md
+++ b/_drafts/02_帰り道.md
@@ -7,7 +7,7 @@
 「やっぱり、サイボーグはけんかも強いのかな」ふと思いついたように、ミノルが続けた。
 「たぶん、弱いと思うよ。椅子に座るだけでもかなり大変そうだったし、あまり機敏な動きはできないんじゃないかな……」教室での様子を思い出して、ぼくはいった。
 「サイボーグっていっても、そんなもんかあ……」ミノルが伸びをしながらいう。少し間をあけて、ぼくの方を横目で見ながらきく。
-「ヒロトも昔、よくサイボーグになりたいって言ってたけど、今もそう思う？」
+「ヒロトも昔、サイボーグになりたいってよく言ってたけど、今もそう思う？」
 
 　意外な質問に、ちょっと驚く。たしかに、小学生くらいの頃、ぼくはサイボーグにあこがれていた。今思えばたわいのない話だけれど、ミノルがそれを覚えていて、さらにそれを真面目に聞いてきたことがおかしくて、ぼくはふっと笑う。
 「そういえば、そんなこと言ってたっけ……」
@@ -18,9 +18,9 @@
 
 　しかし、現実のサイボーグはそんなに強くない。身体機能を代替できるといっても、ほとんどはかろうじて日常生活が送れるという段階だ。ましてや、人間の能力を完全に上回るなんてことはありえない。
 
-「病弱なのもいやだけど、{現代|いま}のレベルのサイボーグとなると、それはそれで大変そうだな……」
+「この弱い体もいやだけど、{現代|いま}のレベルのサイボーグとなると、それはそれで大変そうだな……」
 
-　そう言いながら、ぼくはケイのことを思い浮かべる。彼女にとっては、椅子に座ることも、階段を上り下りすることも、人と会話することも、実はとても大変なことのはずだ。それでも、今日一日、彼女は誰の助けも借りなかった。人工皮膚の表情からは何も読み取れなかったけれど、かなり無理をしていたに違いない。にもかかわらず、ちょかいをかけてきた生徒を撃退するなんてことをやってのけたのだ。改めて、すごいな、と思った。サイボーグになれば、あんなふうに強くなれるのだろうか。
+　そう言いながら、ぼくはケイのことを思い浮かべる。彼女にとっては、椅子に座ることも、階段を上り下りすることも、人と会話することも、実はとても大変なことのはずだ。それでも、今日一日、彼女は誰の助けも借りなかった。人工皮膚の表情からは何も読み取れなかったけれど、かなり無理をしていたに違いない。にもかかわらず、ちょっかいをかけてきた生徒を撃退するなんてことをやってのけたのだ。改めて、すごいな、と思った。サイボーグになれば、あんなふうに強くなれるのだろうか。
 
 「でも、彼女のように強くなれるなら、考えてもいいかもしれない」思っていたことがつい口に出て、すぐにしまった、と思う。横でミノルが声を上げて笑っていた。
 「それは、サイボーグと関係ないだろ」
@@ -32,7 +32,7 @@
 「そっか……。*全身*サイボーグって話だから、ちょっと気になって」ミノルはそういって、なんでもない、というふうに肩をすくめる。
 「うん……」ぼくは、なんて言えばいいかわからなかった。サイボーグの性というのは少し気になるけれど、それを話題にするのは避けたかった。
 
-　ミノルは、もともとミノリという名前で、生物学的には女性だ。しかし、{性自認|ジェンダー・アイデンティティ}は男性で、ものごころついたからミノルと名乗っている。普段はそれを意識することはないけれど、こうして性が関わることが話題になると、どう話せばいいのか一瞬わからなくなる。そうやって変に意識することこそが、ミノルに気まずい思いをさせると分かっていても、どうにもできなかった。
+　ミノルは、もともとミノリという名前で、生物学的には女性だ。しかし、{性自認|ジェンダー・アイデンティティ}は男性で、ものごころついた頃からミノルと名乗っている。普段はそれを意識することはないけれど、こうして性が関わることが話題になると、どういう態度で接すればいいのか一瞬わからなくなる。そうやって変に意識することこそが、ミノルに気まずい思いをさせると分かっていても、どうにもできなかった。
 
 　ミノルも、ぼくがこの話題を苦手に思っていることを知っていて、あまりその手の話を振ってくることはない。ただ、そうやって気を使わせていることも、ぼくには申し訳なかった。ミノルにとって大事な話を、友達としてきちんと聞いてやれない自分が嫌だった。
 
