--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -4,17 +4,19 @@
 
 　みんなが聞きたがったのは、彼女がどういう経緯でサイボーグになったかや、サイボーグであることを僕たちにどう捉えてほしいかということだったが、彼女の口からそれが語られることはなかった。
 
-　授業がはじまっても、彼女に特別な配慮がなされるということはほとんどなかった。当てられれば質問に答えるし、黒板に回答も書きに行く。先生たちも、意識的に彼女を特別扱いしないようにしているようだった。彼女が思ったより普通だということがわかると、何人かは彼女に話しかけるようになった。毅然とした態度は第一印象のままだったけれど、クラスメイトと話す気がないということはないみたいだった。ただ、教室移動なんかのときに、ある生徒が気遣って教科書を持とうとしても、彼女がそれを受け入れることはなかった。また、彼女から他の誰かに話しかけるということもなかった。
+　授業がはじまっても、彼女に特別な配慮がなされるということはほとんどなかった。彼女は、当てられれば質問に答えるし、黒板に回答も書きに行く。先生たちも、意識的に彼女を特別扱いしないようにしているようだった。彼女が思ったより普通だということがわかると、何人かは彼女に話しかけるようになった。毅然とした態度は第一印象のままだったけれど、クラスメイトと話す気がないということはないみたいだった。ただ、教室移動なんかのときに、ある生徒が気遣って教科書を持とうとしても、彼女がそれを受け入れることはなかった。また、彼女から他の誰かに話しかけるということもなかった。
 
 　昼休みに、彼女は教室から姿を消す。あとをつけたというクラスメイトの話によると、職員室の横にある生徒の立ち入りが禁止された部屋の中へ入っていったとのことだった。その部屋は、外から中の様子がわからないようになっている。その生徒は、さらに先生の目を盗んでドアを開けてのぞき見しようとしたらしいが、鍵がかかっていたらしい。彼女は、そこで*充電*しているのではないか、という噂だった。
 
-　まだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女はやはりロボットで、ここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女は国の秘密機関の被検体で、彼女の体には一般には知られていない特殊なパーツが使われているといった話だ。じっさい、彼女の体は、見たことないほどリアルで繊細だった。他にも、実は何十歳も年上のばあさんで、それがばれないようにサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、あの事件を根に持ったタツオがクラスの外で流したものらしかった。
+　まだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女はやはりロボットで、ここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女は国の秘密機関の被検体で、一般には知られていない特殊なパーツが使われているといった話だ。じっさい、彼女の体は、見たことないほどリアルで繊細だった。他にも、実は何十歳も年上のばあさんで、それがばれないようにサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、あの事件を根に持ったタツオがクラスの外で流したものらしかった。
 
 　そういった話の中で、唯一信憑性があるのは、彼女が六年前の航空機事故の被害者というものだった。その根拠は、死亡者リストに彼女の両親とおぼしき男女の名前があったことだ。二人とも彼女と同じ姓で、それは決してよくある姓というわけではなかった。記事には、当時まだ実験導入だった緊急生命維持装置が用いられたという記述もあった。それは、サイボーグの中核となる技術を応用したものだった。
 
 　普段から彼女を気遣っている生徒――入学式の朝、席について教えてくれた髪の長い子だ――が、一度だけ、ごくごく遠まわしに、彼女がサイボーグになった経緯を聞こうとしたことがあった。しかし、ケイがきっぱりと「話したくない」といってその話は終わった。それ以来、誰も彼女にそれを聞くことはなかった。
 
-　ぼくはというと、四月が終わろうという時になっても、あまりクラスになじめずにいた。席の場所の悪さと、気弱な性格があいまって、まだ大半のクラスメイトと話せていない。中学の時、休みがちで迷惑をかけた経験から、部活にも入らなかった。休み時間は基本的に一人で過ごす。また、体調もだんだんと悪くなってきていた。
+　ぼくはというと、四月が終わろうという時になっても、あまりクラスになじめずにいた。席の場所の悪さと、気弱な性格があいまって、まだ大半のクラスメイトと話せていない。中学の時、休みがちで迷惑をかけた経験から、部活にも入らなかった。休み時間は基本的に一人で過ごしている。また、体調もだんだんと悪くなってきていた。
+
+---
 
 　その日、ぼくは体育の授業を見学していた。クラスメイトがハードル走の練習をしているのを、運動場の隅の木陰に座ってぼんやり眺めているときだった。
 「きみ、サイボーグになりたいの」と、横から突然声がした。
@@ -25,11 +27,11 @@
 「そう言うってことは、本当になりたいんだ」ケイがいう。
 
 　ミノルが話したんだろうか、ということが頭をよぎるが、ミノルと彼女に接点があるとは考えにくかった。
-「一応言っておくと、ミノルくんから聞いたわけじゃない。だけど、誰から聞いたかはいえない」ケイが、ぼくの考えを先読みしたように付け加えた。彼女の口からミノルの名前が出たことで、ぼくはいっそう混乱する。いったいどこでミノルのことを知ったのだろう。
+「一応言っておくと、ミノルくんから聞いたわけじゃない。だけど、誰から聞いたかいうつもりはない」ケイが、ぼくの考えを先読みしたように付け加えた。彼女の口からミノルの名前が出たことで、ぼくはいっそう混乱する。いったいどこでミノルのことを知ったのだろう。
 
 「答えたくなかったら、答えなくていい」ケイがさらに言葉を重ねる。それ以上ぼくの疑問にこたえる気はなさそうだった。
 
-　いえないというのなら、まあいいか。ぼくは諦めてはじめの質問に答える。
+　言うつもりがないというのなら、まあいいか。ぼくは諦めてはじめの質問に答える。
 「小学生の頃の話だよ。物語のヒーローにあこがれるみたいなものさ」
 
 　そう言ったあと、彼女のように事故や病気でサイボーグにならざるをえない人もいる中で、サイボーグになりたいなんていっていたことが、あまりに無神経なことに思えて、恥ずかしくなった。
@@ -38,11 +40,11 @@
 「私こそ、ごめん。そんな気にさせるつもりはなかった」ケイがいう。ぼくが何も話さないのを確認すると、彼女が続けた。
 「それじゃ今は、サイボーグになりたいとは思わない？」
 
-　こないだのミノルの質問と同じだった。ただ、あの時みたいに「きみのように強くなれるなら」なんて言えるはずもなく、言葉をにごす。
+　こないだのミノルの質問と同じだった。ただ、あの時みたいに「きみのように強くなれるなら」なんて言えるはずもなく、ぼくは言葉をにごした。
 「どうだろう……」そう言って彼女の方を見る。彼女は、立ったまま座るつもりがないようだった。考えてみれば、地面に座るというのは椅子に座るより難易度が高そうだ。彼女は、ぼくの方を見すえて、次の言葉を待っている。
 
 　ぼくは、また目をそらす。ざっとあたりを見回したけれど、僕とケイが話していることに気づいている人はいなさそうだった。ケイが別の誰かにここでの話をすることもないだろう。ぼくは意を決して、気になっていたことを聞くことにした。
-「きみは、サイボーグだからそんなに強いの？」正面きってたずねることはできなくて、目をそらしたままたずねた。
+「きみは、サイボーグだからそんなに強いの？」ぼくは、目をそらしたままそういった。
 
 「面白いこと言うのね」ケイがいう。合成音声の調子はいつもと変わらなかったけれど、心なしか笑っているように聞こえた。
 「答えたくなかったら、答えなくていい」ぼくは目を背けたまま、彼女の言葉をまねる。
@@ -54,30 +56,26 @@
 
 「わたしが強いかどうかは、わたしにはわからない。でも、今のわたしがあるのは、わたしがサイボーグになったからだと確信をもっていえる。それには、あるきっかけがあった……」彼女は、そこで一瞬言葉を切った。
 
-　ケイが自分のことを話そうとしていると気づいて、ぼくは少し身構えた。ぼくの知る範囲では、これまで誰も彼女から彼女自身の話を聞いたものはいなかった。なぜぼくなんかに他の誰にもしないようなことを話そうとしているのかわからなかったけれど、わざわざ秘密にしてと前置きして話そうとしているのだ。彼女がぼくを信用してくれていることを感じて、それに応えようと思った。ぼくは、耳を澄ませて、彼女の言葉を待った。
+　ケイが自分のことを話そうとしていると気づいて、ぼくは身構えた。ぼくの知る範囲では、これまで誰も彼女から彼女自身の話を聞いたものはいなかった。なぜぼくなんかに他の誰にもしないような話をしようとしているのかわからなかったけれど、わざわざ秘密にしてと前置きして話そうとしているのだ。彼女がぼくを信用してくれていることを感じて、それに応えようと思った。ぼくは、耳を澄ませて、彼女の言葉を待った。少しして、ケイが話し始める。
 
 「サイボーグの体でようやく歩けるようになったころ、一人で病院やリハビリ施設を歩いていると、よく目の前にゴミを投げられた。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうするの。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。そういう場所にいるロボットといえば掃除ロボットくらいだったし、わたしも今よりずっと機械らしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたわけ」
 
-　おかしいでしょ、というように彼女は自虐的に微笑んだ。ぼくはとても笑う気になれない。この話がどこへ向かっているのかわからなかったけれど、ぼくは黙ったまま続きを促した。
+　おかしいでしょ、というように彼女は微笑みの表情をつくる。ぼくはとても笑う気になれない。この話がどこへ向かっているのかわからなかったけれど、ぼくは黙ったまま続きを促した。
 
-「それを知ったとき、最初はやるせなかった。タツオみたいに悪意があれば怒ることも簡単だけど、その時は怒りをどこに向ければいいのかわからなかった。けれど、何度もロボットに間違えられるうち、やるせなさはある疑問に変わった。わたしは本当に人間なのかって。わたしは、自分を人間だと思い込んでるロボットかもしれないって思うようになった。鏡を見ても、そこにいるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、鼓動を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その目で見たものが本当かも、その体が本当にわたしのものかもわからない。
+「それを知ったとき、最初はやるせなかった。タツオみたいに悪意があれば怒ることも簡単だけど、その時は怒りをどこに向ければいいのかわからなかった。けれど、何度もロボットに間違えられるうち、やるせなさはある疑問に変わった。わたしは本当に人間なのかって。わたしは、自分を人間だと思い込んでるロボットかもしれないって考え始めると、それが頭を離れなくなった。鏡を見ても、そこにいるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、鼓動を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その目で見たものが本当かも、その体が本当にわたしのものかもわからない。
 
-　わたしは、自分が人間であるという根拠を探した。いろいろな本を読んでわかったのは、そもそも『{人間|パーソン}』の定義が曖昧だということだった。それに気づいたとき、わたしは、人間であることの定義を、わたしの外側ではなく、わたし自身の内側に求めることにした。つまり、*わたしは*、*わたし自身が人間だと思うから*、*人間である*。そう考えることにしたの。
+　わたしは、自分が人間であるという根拠を探した。いろいろな本を読んでわかったのは、そもそも『{人間|パーソン}』の定義が曖昧だということだった。それに気づいたとき、わたしは、人間であることの定義を、わたしの外側ではなく、わたし自身の内側に求めることにした。つまり、*わたしは*、*わたし自身が人間だと思うから*、*人間である*。そう考えることにしたの。それ以来、わたしは自分が人間であるということを強く意識してきた。それが、今のわたしを形作ってる。サイボーグにならなかったら、こうはなってない」
 
-　それ以来、わたしは自分が人間であるということを強く意識してきた。それが、今のわたしを形作ってる。サイボーグにならなかったら、こうはなってない」
+　言い終えると、彼女はそのまま黙り込んだ。微動だにしないその表情、何かを読み取るにはあまりに難しかった。
 
-　言い終えると、彼女はそのまま黙り込んだ。微動だにしないその表情は、何かを読み取るにはあまりに難しかった。
+　ぼくは、あの入学式の朝、悪意のある言葉に全く動じない彼女を見て強いと思った。でも、それは間違いだった。きっと、彼女は傷ついていたのだ。ただ、あの程度の言葉でつけらるる傷なんかよりずっと深い傷をいくつも負っていて、目立たなかっただけにすぎない。
 
-　ぼくは、あの入学式の朝、悪意のある言葉に全く動じない彼女を見て強いと思った。でも、それは間違いだった。きっと、彼女は傷ついていたに違いない。ただ、あの程度の言葉でつく傷なんかよりずっと深い傷をいくつも負っていて、目立たなかっただけなのだ。
+「きみの強さの理由が、少しわかった気がする……」ぼくはいった。
+「ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにしていたのかもしれない」
 
-「きみの強さの理由が、少しわかった気がする。サイボーグになったから、今のきみがある。そして、ぼくは今のきみを強いと思っている。でもそれは、サイボーグになれば自然に手に入る強さじゃない。きみがきみだからこそ手に入れられた強さなんだと思う……。
+　ぼくがそう言って納得したつもりになっていると、彼女がかぶりを振りながら、さえぎるようにいった。
 
-　ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにしていたんだと思う。きっと、ぼく自身が、心を強く持たないといけないんだね……」
-
-「それは違う」彼女はかぶりをふりながら、はっきりと言った。
-「心の問題と体の問題は、そんな簡単に割り切れるものじゃない。わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。
-
-　きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない。わたしは、心と体が不可分だと思ってる。この機械の体でさえ、わたしの心と密接につながっている」
+「それは違う。心の問題と体の問題は、そんな簡単に切り分けられるものじゃない。わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない。わたしは、心と体が不可分だと思ってる。この機械の体でさえ、わたしの心と密接につながっている」
 
 　ぼくは改めて彼女の体を見た。はじめてみた時、ぼくは一瞬彼女のを何の変哲もない生徒だと思ったことを思い出した。彼女がさらに言葉を続けた。
 
