Add some sentences

--- a/_drafts/04_VR空間.md
+++ b/_drafts/04_VR空間.md
@@ -1,34 +1,49 @@
 　次の日、ぼくはまた熱を出して学校を休んだ。その次の日にはさらに悪化して、結局いつものように入院することになった。
 
-　高熱にうなされていると、また自分の体に嫌気がさしてくる。こんな思いをせずに済むというのなら、やっぱりサイボーグになるのもありかもしれない。そう考えては、ケイが話してくれたことを思い出す。サイボーグになれば楽になれるわけじゃない。心と体は密接につながっている。体が弱っているから、心も弱気になっているのだ。
+<!-- FIXME: もっとわかりやすく自然に -->
+　高熱にうなされていると、また自分の体に嫌気がさしてくる。こんな思いをせずに済むというのなら、やっぱりサイボーグになるのもありかもしれない。そう考えては、ケイが話してくれたことを思い出す。サイボーグになれば楽になれるわけじゃない。体が弱っているから、心も弱気になっているのだ。
 
 　でも、彼女は体を変えることで心を変えてきたともいった。それなら、ぼくも体を変えてみるべきだろうか。ただ、全身サイボーグになるというのは現実的じゃない。部分サイボーグ化にしても、ぼくのこの体の弱さはどこかに特定の原因があるわけではないから、どこを取り替えればいいかわからない。サイボーグになる以外も選択肢だというなら――筋トレや化粧をする気にはならないし――、とりあえずピアス穴でも開けてみようか……。
 
 　そんなとりとめのないことを、寝込んでいるあいだぐるぐると考え続けていた。
 
-　入院三日目の朝には熱も引いて、安静にしていれば特に問題ない状態になった。メッセージを確認すると、ミノルからいくつか届いていた。案の定、クラスメイトからは一通もない。
-“もう大丈夫。明日には退院予定”とミノルにメッセージを送る。すると、すぐに返信が届いた。
+　入院三日目の朝には熱も引いて、安静にしていれば特に問題ない状態になった。メッセージを確認すると、ミノルからいくつか届いていた。
+“もう大丈夫。明日には退院予定”とメッセージを送る。すると、すぐに返信が届いた。
 “じゃ、今日の夕方、久しぶりにあっちで会おう”
 
 　ぼくは、オーケーの絵文字を返した。ちょうど、ミノルに聞きたいこともあった。
 
-　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、VR ヘッドセットを装着して、ミノルがジョインするのを待つ。
+　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラーを装着し、ＶＲヘッドセットをセットして、ミノルが来るのを待つ。病室にうんざりしていたぼくは、待ち合わせ場所をおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣ（ノンプレイヤーキャラクター）だ。
 
-　
----
+　むかしはぼくが入院するたび、ミノルが病室までお見舞いに来てくれていた。けれど、ぼくがあまりに何度も入院するので、いつしかこの形に落ち着いた。物理的な病室ではなく、インターネットに用意したヴァーチャル空間にお見舞いに来てもらうのである。ミノルも病室まで来る手間が省けるし、ぼくも身だしなみを気にする必要がない。
 
-いっそピアスの穴でも開けてみようか。
+　ミノルが、カフェの扉を開けて入ってきた。ミノルのアバターはアメコミのヒーロースタイルで、ボディビルダーのような筋肉をしている。ぼくを見つけると、向かいに座った。
+「今回はどう？」ミノルの声はいつもより少し低い。声にピッチシフトのエフェクトをかけて、男性らしい声になるよう設定している。
+「いつもと同じ。もう大丈夫」ぼくの方は、声にエフェクトを設定していない。アバターは中学の時に好きだったアニメのキャラクターをモチーフにしたもので、そのキャラクターはサイボーグだった。
 
-　心と体が密接につながっているというケイの言葉も、今ならよく分かる。
+　それからは、普段一緒に登校するときと同じように、学校であったことの話や、最近見たビデオの話、ハマってるゲームの話なんかをした。VR チャットの便利な点は、視覚情報をその場で楽に共有できることだ。現実だとモバイルデバイスの小さいディスプレイを除くことになるが、ここでは任意のサイズの画面を空間中に広げることができる。
 
-　いったい彼女は、なぜぼくにあんな話をしたのだろう。ぼくにクラスの友だちがいないから、誰にも話さないと思ったのだろうか。それとも、誰でもよくて、偶然ぼくが体育を見学していたからだろうか。
+　一通り話し終えて、次の話題を探すための間が生まれた。ぼくにはまだ、ミノルに聞きたいことがあった。でも、それを声に出して聞くことができないでいた。それは、僕が普段避けている話題だったし、下手に話せばミノルをを傷つけることになるかもしれない。いつもなら何も考えずに言葉が出るのに、どうやってその話を切り出せばよいかわからなかった。現実世界でぼくはつばを飲み込む。のどが渇いていることや、ハンドルコントローラの手汗の気持ち悪さが無性に気になった。
 
-何を伝えたかったのだろう。そもそも、なぜぼくにあの話をしたのだろう。
+「まだ調子悪い？」ミノルがいっそう低い声でいった。
+「いや、そんなことないよ。どうして？」ぼくは、意識的に明るい声で答えた。
+「なんとなく元気ない気がして。どこかうわの空な感じだし。こういう時、現実だったら顔を見ればわかるんだけど、アバターは基本無表情だからなあ……」そう言いながらミノルのアバターが、両手を広げて頭の高さまで上げ、唇を結び眉間にシワを寄せて顔を振った。〈困った・お手上げ〉のジェスチャーだ。言ってる内容と動作とのギャップに、ぼくは笑った。ミノルもぼくの反応を見て笑う。
+「実は、ミノルに聞きたいことがあるんだ……」自然と言葉がでてきた。
+「もし答えたくなかったら、答えなくていい」
+「わかった」ぼくの普段と違う様子に、インターネットの向こうでミノルが身構えるのがわかった。
 
-　そうして考えるのは、ケイの言葉だった。彼女は
-心と体は密接につながっている。サイボーグになって強い体を手に入れれば、心も強く慣れるかもしれない。
+「ミノルはさ、体を変えたいと思ったことある？」
 
-体が弱っていると、心も弱気になってくる。
+　その質問は、入院中に思いついたものだった。
 
+「なんだ、そんなことか。何を聞かれるのかと思って、ドキドキした」
 
+「真剣なようすだから、何を聞かれるのかと思った」
 
+「あるよ」
+
+「少し上の空な感じがして
+
+本当に聞いてよいものかわからなかった。ミノルの反応が読めなかった。また、その話をどうやって切り出すかも決めていなかった。
+
+電話とかわらない
