Add some sentences

--- a/_drafts/04_VR空間.md
+++ b/_drafts/04_VR空間.md
@@ -1,9 +1,6 @@
-　次の日、ぼくはまた熱を出して学校を休んだ。その次の日にはさらに悪化して、結局いつものように入院することになった。
+　次の日、ぼくはまた熱を出して学校を休んだ。そして、その次の日にはさらに悪化して、結局いつものように入院することになった。
 
-<!-- FIXME: もっとわかりやすく自然に -->
-　高熱にうなされていると、また自分の体に嫌気がさしてくる。こんな思いをせずに済むというのなら、やっぱりサイボーグになるのもありかもしれない。そう考えては、ケイが話してくれたことを思い出す。サイボーグになれば楽になれるわけじゃない。体が弱っているから、心も弱気になっているのだ。
-
-　でも、彼女は体を変えることで心を変えてきたともいった。それなら、ぼくも体を変えてみるべきだろうか。ただ、全身サイボーグになるというのは現実的じゃない。部分サイボーグ化にしても、ぼくのこの体の弱さはどこかに特定の原因があるわけではないから、どこを取り替えればいいかわからない。サイボーグになる以外も選択肢だというなら――筋トレや化粧をする気にはならないし――、とりあえずピアス穴でも開けてみようか……。
+　高熱にうなされながら、ケイに言われたことを考えた。心と体は密接につながっている。たしかに、こうして体が弱っていると、心も弱気になってくる。ぼくはまた、自分の体に嫌気がさしていた。いまさらサイボーグになりたいなんて言わないけれど、やっぱりこの不自由な体を、丈夫で健康な体に取り替えたいと思う。そうすれば、心も強くなれるだろうか？　いや、逆かもしれない。心を強く持たないと、体だって強くならないのかもしれない……。
 
 　そんなとりとめのないことを、寝込んでいるあいだぐるぐると考え続けていた。
 
@@ -11,39 +8,63 @@
 “もう大丈夫。明日には退院予定”とメッセージを送る。すると、すぐに返信が届いた。
 “じゃ、今日の夕方、久しぶりにあっちで会おう”
 
-　ぼくは、オーケーの絵文字を返した。ちょうど、ミノルに聞きたいこともあった。
+　ぼくは、オーケーの絵文字を返す。ちょうど、ミノルに聞きたいこともあった。
 
-　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラーを装着し、ＶＲヘッドセットをセットして、ミノルが来るのを待つ。病室にうんざりしていたぼくは、待ち合わせ場所をおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣ（ノンプレイヤーキャラクター）だ。
+　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラをつけ、ＶＲヘッドセットを装着して、ミノルが来るのを待つ。病室にうんざりしていたぼくは、チャットルームの内装を陽の光が入るおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣ（ノンプレイヤーキャラクター）だ。
 
-　むかしはぼくが入院するたび、ミノルが病室までお見舞いに来てくれていた。けれど、ぼくがあまりに何度も入院するので、いつしかこの形に落ち着いた。物理的な病室ではなく、インターネットに用意したヴァーチャル空間にお見舞いに来てもらうのである。ミノルも病室まで来る手間が省けるし、ぼくも身だしなみを気にする必要がない。
+　むかしはぼくが入院するたび、ミノルが病室までお見舞いに来てくれていた。けれど、ぼくがあまりに何度も入院するので、いつしかこの形に落ち着いた。物理的な病室ではなく、インターネットに用意したヴァーチャル空間にお見舞いに来てもらうのである。ミノルも病室まで来る手間が省けるし、ぼくもやつれた姿を気にする必要がない。
 
 　ミノルが、カフェの扉を開けて入ってきた。ミノルのアバターはアメコミのヒーロースタイルで、ボディビルダーのような筋肉をしている。ぼくを見つけると、向かいに座った。
-「今回はどう？」ミノルの声はいつもより少し低い。声にピッチシフトのエフェクトをかけて、男性らしい声になるよう設定している。
-「いつもと同じ。もう大丈夫」ぼくの方は、声にエフェクトを設定していない。アバターは中学の時に好きだったアニメのキャラクターをモチーフにしたもので、そのキャラクターはサイボーグだった。
+「今回はどう？」ミノルの声はいつもより少し低い。声にピッチシフトのエフェクトをかけて、男性らしい声になるよう設定しているのだ。
+「いつもと同じ。もう大丈夫」ぼくの声は、いつもと変わらない。アバターは中学の時に好きだったアニメのキャラクターをモチーフにしたもので、そのキャラクターはサイボーグだった。
 
-　それからは、普段一緒に登校するときと同じように、学校であったことの話や、最近見たビデオの話、ハマってるゲームの話なんかをした。VR チャットの便利な点は、視覚情報をその場で楽に共有できることだ。現実だとモバイルデバイスの小さいディスプレイを除くことになるが、ここでは任意のサイズの画面を空間中に広げることができる。
+　それからは、普段一緒に登校するときと同じように、学校であったことや、最近見たビデオ、ハマってるゲームの話なんかをした。ＶＲチャットの便利な点は、視覚情報をその場で楽に共有できることだ。現実だとモバイルデバイスの小さいディスプレイを一緒にのぞくことになるが、ここでは好きなサイズの画面を空間の任意の場所に広げることができる。
 
-　一通り話し終えて、次の話題を探すための間が生まれた。ぼくにはまだ、ミノルに聞きたいことがあった。でも、それを声に出して聞くことができないでいた。それは、僕が普段避けている話題だったし、下手に話せばミノルをを傷つけることになるかもしれない。いつもなら何も考えずに言葉が出るのに、どうやってその話を切り出せばよいかわからなかった。現実世界でぼくはつばを飲み込む。のどが渇いていることや、ハンドルコントローラの手汗の気持ち悪さが無性に気になった。
+　一通りのことを話し終えて、次の話題を探すための間が生まれた。ぼくは、考えていた質問をミノルに聞くことを考える。でも、どうやってその話を切り出せばいいかわからなかった。それは、僕が普段避けている話題だったし、下手に話せばミノルをを傷つけることになるかもしれない。いつもなら何も考えずに話せるのに、言葉が頭の中で渦を巻いて形にならなかった。現実世界でぼくはつばを飲み込む。ハンドコントローラの手汗の気持ち悪さが無性に気になった。
 
 「まだ調子悪い？」ミノルがいっそう低い声でいった。
-「いや、そんなことないよ。どうして？」ぼくは、意識的に明るい声で答えた。
-「なんとなく元気ない気がして。どこかうわの空な感じだし。こういう時、現実だったら顔を見ればわかるんだけど、アバターは基本無表情だからなあ……」そう言いながらミノルのアバターが、両手を広げて頭の高さまで上げ、唇を結び眉間にシワを寄せて顔を振った。〈困った・お手上げ〉のジェスチャーだ。言ってる内容と動作とのギャップに、ぼくは笑った。ミノルもぼくの反応を見て笑う。
-「実は、ミノルに聞きたいことがあるんだ……」自然と言葉がでてきた。
-「もし答えたくなかったら、答えなくていい」
-「わかった」ぼくの普段と違う様子に、インターネットの向こうでミノルが身構えるのがわかった。
+「いや、そんなことないよ。どうして？」現実世界の様子を見抜かれて驚いたぼくは、反射的に否定した。元気に聞こえるように努めたけれど、かえってわざとらしかったかもしれない。
+「どこかうわの空な感じだし、なんとなく。こういう時、現実だったら顔を見ればわかるんだけど、ＶＲアバターは無表情だからなあ……」そう言いながらミノルのアバターが、両手を広げて頭の高さまで上げ、唇を結び眉間にシワを寄せて顔を振った。〈困った・お手上げ〉のジェスチャーだ。言ってる内容とのギャップに、ぼくは笑った。ミノルもぼくの反応を見て笑う。
+
+「実は、ミノルに聞きたいことがあるんだ……」緊張が途切れると、自然と言葉がでてきた。
+「なんだい？」
+
+　ぼくは、一度深呼吸した。その音が聞こえたのだろう。ミノルがインターネットの向こうで身構えるのが分かる。
 
 「ミノルはさ、体を変えたいと思ったことある？」
 
-　その質問は、入院中に思いついたものだった。
+　それは、高熱でうなされている時に頭をよぎったことだった。ケイのいうように、心と体が密接に関わっているなら、体の性と心の性が異なるミノルはどうなのだろう。幼い頃は、ミノルも女の子らしい格好をさせられることがあった。そんな時、彼はきまって黙り込んで弱々しくなった。彼の親の話によると、その格好になるまでは暴れまわって徹底的に抵抗していたらしい。化粧や筋トレがそうだというなら、服だって体の延長なのだ。それは心に影響する。そう考えたとき、ある疑問が頭を離れなくなった。もしかするとミノルも――服だけでなく――体を変えたいとずっと悩んでいたのではないだろうか。そう思うと、長年一緒に過ごしてきたのに、ミノルのことを何も知らない気がした。
 
-「なんだ、そんなことか。何を聞かれるのかと思って、ドキドキした」
+　ミノルが、ふーっと息を吐く音が聞こえた。そしていつもの調子で続けた。
 
-「真剣なようすだから、何を聞かれるのかと思った」
+「なんだ、そんなことか。何を聞かれるのかと思って一瞬ドキドキした」
 
-「あるよ」
+　その声を聞いて、ぼくはほっと胸をなでおろす。怒られることや拒絶されることよりも、ミノルが無理して話そうとするのが一番怖かった。ミノルが声のトーンを落として、質問に答える。
 
-「少し上の空な感じがして
+「あるよ、何度も。小さい頃なんかは、いつか体が勝手に変わると思ってた。この体は、自分の本当の体じゃない。だから、そのうち男の体へと自然に変わっていくんだって。でも、当然そんなことはなかった……」
 
-本当に聞いてよいものかわからなかった。ミノルの反応が読めなかった。また、その話をどうやって切り出すかも決めていなかった。
+「同じとは思わないけど、ぼくも小さい頃、大きくなれば体が良くなると思ってた……」当時を思い出して、ぼくがいった。
 
-電話とかわらない
+「うん。そんなだったから、二次性徴がきたときは絶望だった。それに気づいた時ほど、自分の体が嫌だったことはない……。それで、――ヒロトに話したことはなかったけど――中学に入った頃から二次性徴を抑制する治療を始めたんだ。親や医者と相談して、もうすぐホルモン療法も始めることになってる。体を変えたいって思うだけじゃなく、ぼくはすでに自分の体を変えつつあるんだ。サイボーグみたいに外科的なものじゃないけどね」
+
+「知らなかった……」ぼくは、言葉を絞り出した。ミノルが悩んでいたことも、そんな治療をはじめていることも、何も気づいていなかった。本当にミノルのことを何も知らなかったのだとわかって、ショックだった。たしかに、ミノルの体は、同年代の女性に比べれば、胸も出ていないし体の丸みもなかった。ただ、ミノルが男であることがあまりに当たり前で、体が女性であることは知ってはいても、そういうものかと思っていた。ちょっと考えればそんなはずないのに、今まで思いもよらなかった。
+
+「知らなくて当然さ。学校の友達には絶対に知られたくなかったし、知られないようにしてた。特に、ヒロトには気づかれないよう、かなり気を使ってた」
+
+「そうだったんだ……」自分の鈍さがうとましかった。
+
+「――
+
+最近は、隠し事してるみたいで、
+
+――いまさらこんな事言うのもあれだけど、ヒロトがずっと同性の友達として接してくれていなかったら、
+
+
+あの時は、ヒロトが性の話題を避けてくれるのが本当に嬉しかった。
+
+むしろ、ぼくも胸のつっかえが取れたよ。
+
+　ミノルの声が少し震えている。
+ＶＲ空間越しで本当に良かった。
+さっきからずっとＶＲのアバターは機能していない。
+
