--- a/_drafts/04_VR空間.md
+++ b/_drafts/04_VR空間.md
@@ -10,7 +10,7 @@
 
 　ぼくは、オーケーの絵文字を返す。ちょうど、ミノルに聞きたいこともあった。
 
-　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラをつけ、ＶＲヘッドセットを装着して、ミノルが来るのを待つ。病室にうんざりしていたぼくは、チャットルームの内装を陽の光が入るおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣ（ノンプレイヤーキャラクター）だ。
+　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラをつけ、ＶＲヘッドセットを装着して、ミノルが来るのを待つ。病室にうんざりしていたぼくは、ＶＲチャットルームの内装を陽の光が入るおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣ（ノンプレイヤーキャラクター）だ。
 
 　むかしはぼくが入院するたび、ミノルが病室までお見舞いに来てくれていた。けれど、ぼくがあまりに何度も入院するので、いつしかこの形に落ち着いた。物理的な病室ではなく、インターネットに用意したヴァーチャル空間にお見舞いに来てもらうのである。ミノルも病室まで来る手間が省けるし、ぼくもやつれた姿を気にする必要がない。
 
@@ -39,7 +39,7 @@
 
 「なんだ、そんなことか。何を聞かれるのかと思って一瞬ドキドキした」
 
-　その声を聞いて、ぼくはほっと胸をなでおろす。怒られることや拒絶されることよりも、ミノルが無理して話そうとするのが一番怖かった。ミノルが声のトーンを落として、質問に答える。
+　その声を聞いて、ぼくはほっと胸をなでおろす。怒られることや拒絶されることよりも、ミノルが無理して話そうとするのが一番怖かった。ミノルが落ち着いた声で質問に答える。
 
 「あるよ、何度も。小さい頃なんかは、いつか体が勝手に変わると思ってた。この体は、自分の本当の体じゃない。だから、そのうち男の体へと自然に変わっていくんだって。でも、当然そんなことはなかった……」
 
@@ -47,24 +47,31 @@
 
 「うん。そんなだったから、二次性徴がきたときは絶望だった。それに気づいた時ほど、自分の体が嫌だったことはない……。それで、――ヒロトに話したことはなかったけど――中学に入った頃から二次性徴を抑制する治療を始めたんだ。親や医者と相談して、もうすぐホルモン療法も始めることになってる。体を変えたいって思うだけじゃなく、ぼくはすでに自分の体を変えつつあるんだ。サイボーグみたいに外科的なものじゃないけどね」
 
-「知らなかった……」ぼくは、言葉を絞り出した。ミノルが悩んでいたことも、そんな治療をはじめていることも、何も気づいていなかった。本当にミノルのことを何も知らなかったのだとわかって、ショックだった。たしかに、ミノルの体は、同年代の女性に比べれば、胸も出ていないし体の丸みもなかった。ただ、ミノルが男であることがあまりに当たり前で、体が女性であることは知ってはいても、そういうものかと思っていた。ちょっと考えればそんなはずないのに、今まで思いもよらなかった。
+　ぼくは驚いた。ミノルに悩んでいたことも、そんな治療をはじめていることも、何も気づいていなかった。本当にミノルのことを何も知らなかったのだとわかって、ショックだった。たしかに、ミノルの体は、同年代の女性に比べれば、胸も出ていないし体の丸みもない。ただ、ミノルが男であることがあまりに当たり前で、体が女性であることは知ってはいても、そういうものかと思っていた。ちょっと考えればそんなはずないのに、今まで思いもよらなかった。
+「知らなかった……」ぼくは、言葉を絞り出した。
 
 「知らなくて当然さ。学校の友達には絶対に知られたくなかったし、知られないようにしてた。特に、ヒロトには気づかれないよう、かなり気を使ってた」
 
-「そうだったんだ……」自分の鈍さがうとましかった。
+「そうだったんだ……」
 
-「――
+「――でも、話せてすっきりした。昔は絶対知られたくないと思ってたけど、最近は何か隠し事してるみたいでいやだったんだ。聞いてくれてよかった……」
+
+　ミノルの声は、少し震えていた。やっぱり、話しにくいことに違いなかったのだ。はじめは平静を装っていたけど、最後に少し緩んだのだろう。ぼくは、今までのように気づかないふりをした。
+
+「うん……」声を出して、自分でも驚いた。ミノルと同じように、ぼくの声も震えていた。視界も少しゆがんでいることに気づく。ＶＲ空間越しでよかった。目をこするところをミノルに見られることはない。もしかしたら、ミノルも同じことを思っているかもしれない。
+
+「でも、どうして急にそんなこと聞こうと思ったの？」もうミノルの声は震えていなかった。ぼくも切り替えるように努める。
+
+「ケイに言われたことがきっかけだったんだ……」ぼくはそういって、体育見学をしている時に彼女と話したことをミノルに伝えた。
+
+きっといまなにか話せば、
+
+いまさらこんなこと言うのもなんだけど、ヒロトがずっと同性の友達として接してくたから、ふつうに学校に通えたんだ。ヒロトだけは、ぼくに何があっても態度を変えることがなかった……」
+
+　ミノルの声は、少し震えていた。言いにくいことだったに違いない。
+
+今のぼくがあるんだ。ヒロトだけは、何があっても
+
+ていなかったら、今のぼくはなかったと思う。ぼくは、ヒロトに感謝してるんだよ……」
 
 最近は、隠し事してるみたいで、
-
-――いまさらこんな事言うのもあれだけど、ヒロトがずっと同性の友達として接してくれていなかったら、
-
-
-あの時は、ヒロトが性の話題を避けてくれるのが本当に嬉しかった。
-
-むしろ、ぼくも胸のつっかえが取れたよ。
-
-　ミノルの声が少し震えている。
-ＶＲ空間越しで本当に良かった。
-さっきからずっとＶＲのアバターは機能していない。
-
